# animanga

./: .env  .gitignore  README.md  docker-compose.yml
infos/: Unbenannt-2023-01-20-0922.excalidraw  dbdiagram.io.aml  future.surreal  template.surreal  test_define.surreal
infos/api.consumet.org/: anime_crunchyroll_info.json  manga_mangadex_info.json
infos/api.jikan.moe_v4/: anime.json  anime_full.json  anime_full.suql  anime_genres.json  characters.json  characters_full.json  manga.json  manga_full.json  manga_genres.json  people.json  people_full.json  producers.json  producers_full.json  user.json  user_full.json
infos/surreal/: current.surrealql  future.surrealql  template.surrealql  test.surrealql  test_define.surrealql
old/bkp_db/: bank_1.sql  bank_2.sql  bank_3.sql
old/services/: Dockerfile  docker-compose.yml  (+1 more)
services/api/: .dockerignore  .env_template  .prettierrc.json  Cargo.toml  Dockerfile
services/api/src/: lib.rs  main.rs
services/api/src/constructor/: mod.rs
services/api/src/constructor/crunchyroll/: anime.rs  manga.rs  mod.rs
services/api/src/constructor/manga/: mangadex.rs
services/api/src/constructor/myanimelist/: anime.rs  manga.rs  mod.rs
services/api/src/handlers/: mod.rs  test.rs
services/api/src/handlers/anime/: main.rs  mod.rs  request.rs  search.rs  user.rs
services/api/src/handlers/manga/: main.rs  search.rs  user.rs
services/api/src/handlers/status/: export.rs  import.rs  main.rs  mod.rs
services/api/src/handlers/user/: main.rs  mod.rs
services/api/src/middleware/: caching.rs  logger.rs  mod.rs  redis.rs.bkp
(+64 files in other folders)
