[package]
name = "api"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0.188", features = ["derive"] }
surrealdb = "1.0.0-beta.10"
redis = "0.23.3"
meilisearch-sdk = "0.24.1"
serde_json = "1.0.105"
log = "0.4.20"
env_logger = "0.10.0"
dotenv = "0.15.0"
once_cell = "1.18.0"


#[profile.release]
# panic = "abort" # Optional but recommended for better performance in release builds
# rustflags = ["-C", "recursion_limit=256"]
#recursion_limit = 500
